--- a/pages/pc.html
+++ b/pages/pc.html
@@ -2,7 +2,7 @@
 <html lang="zh_CN">
 <head>
     <meta charset="UTF-8">
-    <title>深圳市立信创源科技有限公司2019年会盛宴</title>
+    <title></title>
 
     <link href="../css/animate.min.css" rel="stylesheet" type="text/css">
     <link href="../css/swiper.min.css" rel="stylesheet" type="text/css">
@@ -10,8 +10,8 @@
 </head>
 <body>
 <div id="container">
-    <img class="logo" src="../images/2_6.png">
-    <img class="code" src="../images/1_8.png">
+    <!--<img class="logo" src="../images/2_6.png">
+    <img class="code" src="../images/1_8.png">-->
 
     <div id="content">
         <div class="header">
