--- a/pages/phone.html
+++ b/pages/phone.html
@@ -2,10 +2,11 @@
 <html lang="zh_CN">
 <head>
     <meta charset="UTF-8">
-    <title>深圳市立信创源科技有限公司2019年会盛宴</title>
+    <title></title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 
+    <link rel="stylesheet" href="../css/iconfont.css">
     <link rel="stylesheet" href="../css/animate.min.css" type="text/css">
     <link rel="stylesheet" href="../css/newAnimate.css" type="text/css">
     <link rel="stylesheet" href="../css/phone.css" type="text/css">
@@ -86,7 +87,7 @@
 </div>-->
 
 <!--问卷调查-->
-<div class="questionnaire-win" id="questionnaire-win" style="display: none;">
+<div class="questionnaire-win" id="questionnaire-win">
     <div class="questionnaire-con">
         <div class="title">
             <img src="../images/1_6.png" alt="" class="title-bg">
@@ -144,6 +145,7 @@
                 <option value="1">男</option>
                 <option value="0">女</option>
             </select>
+            <i class="icon iconfont icon-sanjiaoxing"></i>
         </div>
 
         <div class="inputBox">
@@ -158,6 +160,7 @@
                 <option value="">硕士</option>
                 <option value="">博士</option>
             </select>
+            <i class="icon iconfont icon-sanjiaoxing"></i>
         </div>
 
         <div class="inputBox">
@@ -195,6 +198,7 @@
                 <option value="">广东外语外贸大学</option>
                 <option value="">深圳大学</option>
             </select>
+            <i class="icon iconfont icon-sanjiaoxing"></i>
         </div>
 
         <a href="javascript:;" class="submitSign">
