--- a/pages/pc.html
+++ b/pages/pc.html
@@ -2,7 +2,7 @@
 <html lang="zh_CN">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>中国银行深圳市分行2020年校园招聘</title>
 
     <link href="../css/animate.min.css" rel="stylesheet" type="text/css">
     <link href="../css/swiper.min.css" rel="stylesheet" type="text/css">
@@ -142,7 +142,7 @@
         <ul class="nav">
             <li id="nav1"><img src="../images/2_1.png"><span>签到</span></li>
             <!--<li id="nav2"><img src="../images/2_2.png"><span>投票</span></li>-->
-            <li id="nav3"><img src="../images/2_3.png"><span>抽奖</span></li>
+            <li id="nav3"><img src="../images/2_2.png"><span>抽奖</span></li>
             <!--<li id="nav4"><img src="../images/3_3.png"><span>评论</span></li>-->
         </ul>
 
@@ -164,9 +164,9 @@
 
 <script src="../scripts/pc/main.js"></script>
 <script src="../scripts/pc/sign.js"></script>
-<script src="../scripts/pc/vote.js"></script>
+<!--<script src="../scripts/pc/vote.js"></script>-->
 <script src="../scripts/pc/lottery.js"></script>
-<script src="../scripts/pc/comment.js"></script>
+<!--<script src="../scripts/pc/comment.js"></script>-->
 <script>
     main.init();
 </script>
