--- a/pages/phone.html
+++ b/pages/phone.html
@@ -2,7 +2,7 @@
 <html lang="zh_CN">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>中国银行深圳市分行2020年校园招聘</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 
@@ -31,7 +31,7 @@
 </div>
 
 <!--背景图-->
-<img src="../images/1_5.jpg" class="bg">
+<img src="../images/1_5.png" class="bg">
 
 <!-- 头部 -->
 <img class="logo" src="../images/1_3.png">
@@ -41,7 +41,7 @@
 
 <img class="photo" id="userImg1" src="../images/1_6.png">
 
-<img class="person" src="../images/1_4.png">
+<!--<img class="person" src="../images/1_4.png">-->
 
 
 <a id="signBtn" href="javascript:void(0);">
@@ -99,7 +99,7 @@
             <div class="select-box">
                 <div class="select-item">
                     <div class="select-border"></div>
-                    <div class="select-text">就业网</div>
+                    <div class="select-text">学校就业网</div>
                 </div>
                 <div class="select-item">
                     <div class="select-border"></div>
@@ -115,7 +115,35 @@
                 </div>
                 <div class="select-item">
                     <div class="select-border"></div>
+                    <div class="select-text">微信朋友圈</div>
+                </div>
+                <div class="select-item">
+                    <div class="select-border"></div>
+                    <div class="select-text">中行官网</div>
+                </div>
+                <div class="select-item">
+                    <div class="select-border"></div>
+                    <div class="select-text">中行微信公众号</div>
+                </div>
+                <div class="select-item">
+                    <div class="select-border"></div>
+                    <div class="select-text">老师推荐</div>
+                </div>
+                <div class="select-item">
+                    <div class="select-border"></div>
+                    <div class="select-text">亲友介绍</div>
+                </div>
+                <div class="select-item">
+                    <div class="select-border"></div>
                     <div class="select-text">智联广告</div>
+                </div>
+                <div class="select-item">
+                    <div class="select-border"></div>
+                    <div class="select-text">其他专业招聘网站</div>
+                </div>
+                <div class="select-item">
+                    <div class="select-border"></div>
+                    <div class="select-text">其他</div>
                 </div>
             </div>
         </div>
@@ -185,7 +213,6 @@
                 <option value="">中国人民大学</option>
                 <option value="">中央财经大学</option>
                 <option value="">对外经济贸易大学</option>
-                <option value="">东北财经大学</option>
                 <option value="">大连理工大学</option>
                 <option value="">武汉大学</option>
                 <option value="">中南财经政法大学</option>
@@ -193,7 +220,6 @@
                 <option value="">西南财经大学</option>
                 <option value="">江西财经大学</option>
                 <option value="">中山大学</option>
-                <option value="">华南理工大学</option>
                 <option value="">暨南大学</option>
                 <option value="">广东外语外贸大学</option>
                 <option value="">深圳大学</option>
@@ -204,6 +230,36 @@
         <a href="javascript:;" class="submitSign">
             <img src="../images/1_7.png" alt="">
         </a>
+    </div>
+</div>
+
+
+<!--注意事项-->
+<div class="tip-win" id="tip-win">
+    <div class="tip-con">
+        <div class="title">
+            <img src="../images/1_6.png" alt="" class="title-bg">
+            <div class="title-text">注意事项</div>
+        </div>
+
+        <div class="tip-dec">
+            <div class="dec-title">
+                <p>1、每人仅限签到一次；</p>
+                <p>2、请筛选正确的宣讲场次院校，如筛选错误签到无效；</p>
+                <p>3、请检查手机号码及邮箱信息，以便后续及时联系您。</p>
+            </div>
+
+        </div>
+
+        <div class="btn-wra">
+            <a href="javascript:void(0);" class="cancel-btn">
+                <img src="../images/1_41.png" alt="">
+            </a>
+            <a href="javascript:void(0);" class="confirm-btn">
+                <img src="../images/1_40.png" alt="">
+            </a>
+        </div>
+
     </div>
 </div>
 
